--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 .idea/*
 /.idea/
 /.phpintel/
+/.phpintel/*
 ## Sublime Text cache files
 *.tmlanguage.cache
 *.tmPreferences.cache
